<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AccountFragment">

    <TextView
        android:id="@+id/greetingHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/greeting"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/user_name_placeholder"
        android:textStyle="bold"
        android:textColor="@color/orange"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/greetingHolder"
        app:layout_constraintTop_toTopOf="@+id/greetingHolder" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/trackingBtn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/orange"
            android:elevation="10dp"
            android:gravity="center_vertical"
            android:text="@string/tracking_order"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:cornerRadius="5dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/informationBtn"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            app:cornerRadius="5dp"
            android:elevation="10dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:text="@string/personal_information"
            android:textSize="17sp"
            app:strokeColor="@color/orange"
            app:strokeWidth="2dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/changePasswordBtn"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            app:cornerRadius="5dp"
            android:elevation="10dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:text="@string/change_password"
            android:textSize="17sp"
            app:strokeColor="@color/orange"
            app:strokeWidth="2dp"  />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/switchLanguageBtn"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            app:cornerRadius="5dp"
            android:elevation="10dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:text="@string/switch_language"
            android:textSize="17sp"
            app:strokeColor="@color/orange"
            app:strokeWidth="2dp"  />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/customerServicesContainer"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            app:cornerRadius="5dp"
            android:elevation="10dp"
            android:gravity="center_vertical"
            app:strokeColor="@color/orange"
            app:strokeWidth="2dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btnCustomerService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_marginStart="10dp"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="#00FFFFFF"
                    android:src="@drawable/ic_headphones"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/orange" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:background="#00FFFFFF"
                    android:text="@string/customer_service"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/imageView6"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/logOutBtn"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            app:cornerRadius="5dp"
            android:elevation="10dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:text="@string/log_out"
            android:textSize="17sp"
            app:strokeColor="@color/orange"
            app:strokeWidth="2dp"  />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
