<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="24dp"
    tools:context=".activity.CustomizePizzaActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:background="@drawable/ic_arrow_back"
            android:backgroundTintMode="src_in"
            android:contentDescription="@string/go_back"
            android:clickable="true"
            android:layout_gravity="start" />

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Customize Pizza"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="center" />

    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/line_1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:background="@color/light_gray"
        app:elevation="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>

    <FrameLayout
        android:id="@+id/layerContainer"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line_1" >

        <ImageView
            android:id="@+id/pizza_image"
            android:layout_width="260dp"
            android:layout_height="260dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/crust" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/quantity_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/layerContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            app:cardElevation="2dp"
            android:foreground="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="-"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp"
                android:background="#F3F5F7"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/quantity_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            app:cardElevation="2dp"
            android:foreground="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="+"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="16sp"
                android:background="@color/orange"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/quantity_layout"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <RadioGroup
                    android:id="@+id/size_radio_button_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/size_s"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="56dp"
                        android:text="S"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:buttonTint="@color/black" />

                    <RadioButton
                        android:id="@+id/size_m"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="60dp"
                        android:text="M"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        app:buttonTint="@color/black"/>

                    <RadioButton
                        android:id="@+id/size_l"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="56dp"
                        android:text="L"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        app:buttonTint="@color/black"/>
                </RadioGroup>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crust_thickness"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="16dp"/>

            <LinearLayout
                android:id="@+id/crust_thickness_layout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <RadioGroup
                    android:id="@+id/crust_thickness_radio_button_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/crust_thin"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="56dp"
                        android:text="@string/thin"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        app:buttonTint="@color/black"/>

                    <RadioButton
                        android:id="@+id/crust_thick"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="80dp"
                        android:text="@string/thick"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        app:buttonTint="@color/black"/>
                </RadioGroup>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crust_base_ingredient"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="16dp"/>

            <LinearLayout
                android:id="@+id/crust_base_ingredient_layout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <CheckBox
                    android:id="@+id/crust_cheese"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="48dp"
                    android:text="@string/cheese"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    app:buttonTint="@color/black"/>

                <CheckBox
                    android:id="@+id/crust_chicken"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="48dp"
                    android:text="@string/chicken"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    app:buttonTint="@color/black"/>

                <CheckBox
                    android:id="@+id/crust_sausage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sausage"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    app:buttonTint="@color/black"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sauce"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="16dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/sauce_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:paddingBottom="5dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addition"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="16dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/addition_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:paddingBottom="5dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seafood"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="16dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/seafood_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:paddingBottom="5dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meat"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="16dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/meat_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:paddingBottom="5dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vegetable"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="16dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/vegetable_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:paddingBottom="5dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <View
                android:layout_width="match_parent"
                android:layout_height="68dp"/>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/add_to_cart_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/add_to_cart"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/orange"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
